[gd_scene load_steps=7 format=2]

[ext_resource path="res://Battle/Enemies/Turret/ufoBlue.png" type="Texture" id=1]
[ext_resource path="res://Battle/Enemies/Turret/gun06.png" type="Texture" id=2]
[ext_resource path="res://Battle/Enemies/Turret/Turret.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=2]
rough = true
bounce = 0.8

[sub_resource type="CircleShape2D" id=1]
radius = 47.0425

[sub_resource type="CircleShape2D" id=3]
radius = 743.132

[node name="Turret" type="RigidBody2D" groups=["enemy"]]
mode = 1
physics_material_override = SubResource( 2 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 2 )
z_index = 1
texture = ExtResource( 2 )
offset = Vector2( 0, -15 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="detection_area" type="Area2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
scale = Vector2( 100000, 100000 )
shape = SubResource( 3 )
one_way_collision_margin = 0.0

[node name="LoadingTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, -66 )

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="LoadingTimer" to="." method="_on_LoadingTimer_timeout"]
